# soff-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
api/: requirements.txt
api/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
api/accounts/fixtures/: accounts.json  userotp.json
api/accounts/migrations/: 0001_initial.py  0002_alter_userotp_otp_attempts.py  0002_rename_liked_favorite_is_liked.py  0003_userotp_block_time.py  0003_userotp_is_validated.py  0004_alter_userotp_otp.py  0005_remove_userotp_block_time_alter_userotp_user.py
api/api/: settings.py  urls.py
api/cart/: admin.py  models.py  serializers.py  urls.py  views.py
api/cart/fixtures/: cart_items.json  carts.json
api/cart/migrations/: 0001_initial.py  0002_alter_cartitem_options.py
api/categories/: admin.py  models.py  serializers.py  urls.py  views.py
api/categories/fixtures/: productcategories.json  roomcategories.json
api/categories/migrations/: 0001_initial.py  0002_productcategory_image_roomcategory_image.py
api/manufacturers/: admin.py  models.py  serializers.py  urls.py  views.py
api/manufacturers/fixtures/: manufacturers.json
api/manufacturers/migrations/: 0001_initial.py
api/products/: admin.py  models.py  serializers.py  urls.py  views.py
api/products/fixtures/: product_images.json  products.json  soff.json
api/products/migrations/: 0001_initial.py
apps/carts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/carts/migrations/: 0001_initial.py  0002_initial.py
apps/categories/: admin.py  models.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/manufacturers/: admin.py  serializers.py  urls.py  views.py
apps/manufacturers/migrations/: 0001_initial.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
